deploy/cloud-deprecated/manifests/interfaces/redis/redisinsight.yaml
# Copyright © 2022 sealos.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Namespace
metadata:
  name: redisinsight-service
  annotations:
  labels:
    name: redisinsight-service

---
# RedisInsight service with name 'redisinsight-service'
apiVersion: v1
kind: Service
metadata:
  # name should not be 'redisinsight'
  # since the service creates
  # environment variables that
  # conflicts with redisinsight
  # application's environment
  # variables `REDISINSIGHT_HOST` and
  # `REDISINSIGHT_PORT`
  name: redisinsight-service
  namespace: redisinsight-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8001
  selector:
    app: redisinsight

---
# RedisInsight deployment with name 'redisinsight'
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redisinsight #deployment name
  namespace: redisinsight-service
  labels:
    app: redisinsight #deployment label
spec:
  replicas: 1 #a single replica pod
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: redisinsight #which pods is the deployment managing, as defined by the pod template
  template: #pod template
    metadata:
      labels:
        app: redisinsight #label for pod/s
    spec:
      volumes:
        - name: db
          persistentVolumeClaim:
            claimName: redisinsight-pv-claim
      containers:
        - name: redisinsight #Container name (DNS_LABEL, unique)
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - "ALL"
          #@note: bug with latest image at 2022-1016. fix see: https://github.com/RedisInsight/RedisInsight/issues/1055
          image: redislabs/redisinsight:hotfix-sentinel-probe #repo/image
          imagePullPolicy: IfNotPresent #Always pull image
          volumeMounts:
            - name: db #Pod volumes to mount into the container's filesystem. Cannot be updated.
              mountPath: /db
          ports:
            - containerPort: 8001 #exposed container port and protocol
              protocol: TCP
